Update account service with postgresql
