# api/controllers/sportEnergyAccountController.js
@@ -1,198 +1,229 @@
-// var MongoClient = require('mongodb').MongoClient,
-//   ObjectID = require('mongodb').ObjectID,
-//   url = 'mongodb://'+ (process.env.MONGO_HOST || 'localhost') + ':27017/';
+const { Pool, Client } = require('pg');
+// clients will use environment variables
+// for connection information
+const pool = new Pool();
+// the pool with emit an error on behalf of any idle clients
+// it contains if a backend error or network partition happens
+pool.on('error', (err, client) => {
+  console.error('Unexpected error on idle client', err)
+  process.exit(-1)
+});
 
 exports.read_sportEnergyAccount = function(req, res) {
   //If there is no query params, list all
   if (JSON.stringify(req.query) == '{}') {
-    const { Pool, Client } = require('pg');
-
-    // clients will use environment variables
-    // for connection information
-    const pool = new Pool();
-
-    // the pool with emit an error on behalf of any idle clients
-    // it contains if a backend error or network partition happens
-    pool.on('error', (err, client) => {
-      console.error('Unexpected error on idle client', err)
-      process.exit(-1)
-    });
-
-    // callback - checkout a client
     pool.connect((err, client, done) => {
       if (err) throw err
       const text = 'select * from sport_energy_account;'
       client.query(text, (err, sportEnergyAccount) => {
         done()
-
         if (err) {
           console.log(err.stack)
-        } else {
-          res.send(sportEnergyAccount.rows)
+        } 
+        else {
+          data = sportEnergyAccount.rows;
+          res.json({
+            "code": "200",
+            "message": "Success",
+            "entity": "",
+            data
+          })
         }
       })
     });
-
   }
-  // //Search by account id
-  // else if (req.query._id) {
-  //   MongoClient.connect(url, function(err, db) {
-  //     if (err) throw err;
-  //     var dbo = db.db('sportEnergyDB');
-  //     var whereStr = {'_id':ObjectID(req.query._id)};
-  //     dbo.collection('sportEnergyAccount').find(whereStr).toArray(function(err, sportEnergyAccount) {
-  //       if (err) throw err;
-  //       res.json(sportEnergyAccount);
-  //       db.close();
-  //     });
-  //   });
-  // }
-  // //Search by card number
-  // else if (req.query.cardNumber) {
-  //   MongoClient.connect(url, function(err, db) {
-  //     if (err) throw err;
-  //     var dbo = db.db('sportEnergyDB');
-  //     var whereStr = {'cardNumber':req.query.cardNumber};
-  //     dbo.collection('sportEnergyAccount').find(whereStr).toArray(function(err, sportEnergyAccount) {
-  //       if (err) throw err;
-  //       res.json(sportEnergyAccount);
-  //       db.close();
-  //     });
-  //   });
-  // }
+
+  //Search by account id
+  else if (req.query.pointAccountId) {
+    pool.connect((err, client, done) => {
+      if (err) throw err
+      const text = 'select * from sport_energy_account where point_account_id = $1;'
+      const values = [req.query.pointAccountId];
+      client.query(text, values, (err, sportEnergyAccount) => {
+        done()
+        if (err) {
+          console.log(err.stack)
+        } 
+        else {
+          data = sportEnergyAccount.rows;
+          res.json({
+            "code": "200",
+            "message": "Success",
+            "entity": "",
+            data
+          })
+        }
+      })
+    });
+  }
+
+  //Search by card number
+  else if (req.query.cardNumber) {
+    pool.connect((err, client, done) => {
+      if (err) throw err
+      const text = 'select * from sport_energy_account where card_number = $1;'
+      const values = [req.query.cardNumber];
+      client.query(text, values, (err, sportEnergyAccount) => {
+        done()
+        if (err) {
+          console.log(err.stack)
+        } 
+        else {
+          data = sportEnergyAccount.rows;
+          res.json({
+            "code": "200",
+            "message": "Success",
+            "entity": "",
+            data
+          })
+        }
+      })
+    });
+  }
   //Other query params
   else {
-    res.send({Message: 'Not right information to read sport energy account.'});
+    res.json({
+      "code": "400",
+      "message": "No sufficient information, data not found.",
+      "entity": "",
+      data
+    });
   }
 };
 
-// exports.create_sportEnergyAccount = function(req, res) {
-//   //Create account only when card number and operator are both provided
-//   if (req.body.cardNumber && req.body.operator) {
-//     MongoClient.connect(url, function(err, db) {
-//       if (err) throw err;
-//       var dbo = db.db('sportEnergyDB');
-//       var whereStr = {'cardNumber':req.body.cardNumber};
-//       dbo.collection('sportEnergyAccount').find(whereStr).toArray(function(err, sportEnergyAccount_exist) {
-//         if (err) throw err;
-//         //If the card number already has energy account, stop creation
-//         else if (sportEnergyAccount_exist[0]) {
-//           res.json({Message: 'This card number already has an energy account.'});
-//           db.close();
-//         }
-//         //Create point account with card number and record operator
-//         else {
-//           var myDate = new Date();
-//           var myobj = {'cardNumber':req.body.cardNumber, 'energyBalance': 0, 'accountStatus': 'valid',
-//             'createTime':myDate.toLocaleString( ), 'updateTime':myDate.toLocaleString( ), 
-//             'createBy':req.body.operator, 'updateBy':req.body.operator};
-//           dbo.collection('sportEnergyAccount').insert(myobj, function(err, sportEnergyAccount) {
-//               if (err) throw err;
-//               res.json(sportEnergyAccount);
-//               db.close();
-//           });
-//         }
-//       });
-//     });
-//   }
-//   //Otherwise, no account will be created
-//   else {
-//     res.json({Message: 'Not sufficient information to create sport energy account.'});
-//   }
-// };
+exports.create_sportEnergyAccount = function(req, res) {
+  //Create account only when card number and operator are both provided
+  if (req.body.cardNumber && req.body.operator) {
+    pool.connect((err, client, done) => {
+      if (err) throw err;
+      const text = 'insert into sport_energy_account values (DEFAULT, $1, 0, $2, now(), null);'
+      const values = [req.body.cardNumber, req.body.operator];
+      client.query(text, values, (err, sportEnergyAccount) => {
+        done()
+        if (err) {
+          console.log(err.stack)
+        } 
+        else {
+          data = sportEnergyAccount;
+          res.send({
+            "code": "200",
+            "message": "success",
+            "entity": "",
+            data
+          });
+        }
+      })
+    });
+  }
+  //Otherwise, no account will be created
+  else {
+    res.json({
+      "code": "400",
+      "message": "No sufficient information, data not found.",
+      "entity": "",
+      data
+    });
+  }
+};
 
-// exports.delete_sportEnergyAccount = function(req, res) {
-//   //Delete by account id
-//   if (req.query._id) {
-//     MongoClient.connect(url, function(err, db) {
-//       if (err) throw err;
-//       var dbo = db.db('sportEnergyDB');
-//       var whereStr = {'_id':ObjectID(req.query._id)};
-//       dbo.collection('sportEnergyAccount').find(whereStr).toArray(function(err, sportEnergyAccount_exist) {
-//         if (err) throw err;
-//         //If the account id exists, delete account
-//         else if (sportEnergyAccount_exist[0]) {
-//           dbo.collection('sportEnergyAccount').deleteOne(whereStr, function(err, sportEnergyAccount) {
-//             if (err) throw err;
-//             res.json(sportEnergyAccount);
-//             db.close();
-//           });
-//         }
-//         //Otherwise, stop deletion process
-//         else {
-//           res.json({Message: 'This account id doesn\'t exist.'});
-//           db.close();
-//         }
-//       });
-//     });
-//   }
-//   //Delete by card number
-//   else if (req.query.cardNumber) {
-//     MongoClient.connect(url, function(err, db) {
-//       if (err) throw err;
-//       var dbo = db.db('sportEnergyDB');
-//       var whereStr = {'cardNumber':req.query.cardNumber};
-//       dbo.collection('sportEnergyAccount').find(whereStr).toArray(function(err, sportEnergyAccount_exist) {
-//         if (err) throw err;
-//         //If the card number exists, delete account
-//         else if (sportEnergyAccount_exist[0]) {
-//           dbo.collection('sportEnergyAccount').deleteOne(whereStr, function(err, sportEnergyAccount) {
-//             if (err) throw err;
-//             res.json(sportEnergyAccount);
-//             db.close();
-//           });
-//         }
-//         //Otherwise, stop deletion process
-//         else {
-//           res.json({Message: 'This card number doesn\'t have linked energy account.'});
-//           db.close();
-//         }
-//       });
-//     });
-//   }
-//   //Otherwise, no account will be deleted
-//   else {
-//     // console.log('Delete sport energy account failed.');
-//     res.json({Message: 'Please provide necessary information to remove sport energy account.'})
-//   }
-// };
+exports.delete_sportEnergyAccount = function(req, res) {
+  //Delete by account id
+  if (req.query.pointAccountId) {
+    pool.connect((err, client, done) => {
+      if (err) throw err;
+      const text = 'delete from sport_energy_account where point_account_id = $1;'
+      const values = [req.query.pointAccountId];
+      client.query(text, values, (err, sportEnergyAccount) => {
+        done()
+        if (err) {
+          console.log(err)
+        } 
+        else {
+          data = sportEnergyAccount;
+          res.send({
+            "code": "200",
+            "message": "success",
+            "entity": "",
+            data
+          });
+        }
+      })
+    });
+  }
 
-// exports.update_sportEnergyAccount = function(req, res) {
-//   //Update balance by account id
-//   if (req.query._id && req.body.operator) {
-//     MongoClient.connect(url, function(err, db) {
-//       if (err) throw err;
-//       var dbo = db.db('sportEnergyDB');
-//       var whereStr = {'_id':ObjectID(req.query._id)};
-//       dbo.collection('sportEnergyAccount').find(whereStr).toArray(function(err, sportEnergyAccount_old) {
-//         if (err) throw err;
-//         //If the account id exists, update account balance
-//         else if (sportEnergyAccount_old[0]) {
-//           var myDate = new Date();
-//           //only update when the value is not null
-//           var objForUpdate = {};
-//           if (req.body.cardNumber) objForUpdate.cardNumber = req.body.cardNumber;
-//           if (req.body.energyBalance) objForUpdate.energyBalance = req.body.energyBalance;
-//           if (req.body.accountStatus) objForUpdate.accountStatus = req.body.accountStatus;
-//           objForUpdate.updateTime = myDate.toLocaleString( );
-//           objForUpdate.updateBy = req.body.operator;
-//           var updateStr = {$set:objForUpdate};
-//           dbo.collection('sportEnergyAccount').updateOne(whereStr, updateStr, function(err, sportEnergyAccount) {
-//             if (err) throw err;
-//             res.json(sportEnergyAccount);
-//             db.close();
-//           });
-//         }
-//         //Otherwise, stop update process
-//         else {
-//           res.json({Message: 'This account id doesn\'t exist.'});
-//           db.close();
-//         }
-//       });
-//     });
-//   }
-//   //Otherwise, no account will be updated
-//   else {
-//     res.json({Message: 'Update sport energy account failed. Please provide necessary information to update sport energy account.'})
-//   }
-// };
+  //Delete by card number
+  else if (req.query.cardNumber) {
+    pool.connect((err, client, done) => {
+      if (err) throw err;
+      const text = 'delete from sport_energy_account where card_number = $1;'
+      const values = [req.query.cardNumber];
+      client.query(text, values, (err, sportEnergyAccount) => {
+        done()
+        if (err) {
+          console.log(err)
+        } 
+        else {
+          data = sportEnergyAccount;
+          res.send({
+            "code": "200",
+            "message": "success",
+            "entity": "",
+            data
+          });
+        }
+      })
+    });
+  }
+
+  //Otherwise, no account will be deleted
+  else {
+    res.json({Message: 'Please provide necessary information to remove sport energy account.'})
+  }
+};
+
+exports.update_sportEnergyAccount = function(req, res) {
+  //Update balance by account id
+  if (req.query.pointAccountId && req.body.operator && req.body.pointBalance) {
+    pool.connect((err, client, done) => {
+      if (err) throw err;
+      else {
+        const text2 = 'update sport_energy_account set point_balance = $1, update_by = $2, update_time = now() where point_account_id = $3;'
+        const values2 = [req.body.pointBalance, req.body.operator, req.query.pointAccountId]; 
+        client.query(text2, values2, (err, sportEnergyAccount) => {
+          done()
+          if (err) {
+            console.log(err)
+          } 
+          else {
+            count = sportEnergyAccount.rowCount;
+            data = sportEnergyAccount;
+            if (count == 1) {
+              res.send({
+              "code": "200",
+              "message": "success",
+              "entity": "",
+              data
+              });
+            }
+            else if (count == 0) {
+              res.send({
+              "code": "404",
+              "message": "Unable to find the point account id.",
+              "entity": ""
+              });
+            }
+          }
+        })
+      }
+    })
+  }
+  //Otherwise, no account will be updated
+  else {
+    res.json({
+      "code": "400",
+      "message": "No sufficient information, data not found.",
+      "entity": "",
+      data
+    });
+  }
+};
